--- a/DatabaseExample/package.json
+++ b/DatabaseExample/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.2",
     "express-error-handler": "^1.1.0",
     "express-session": "^1.15.6",
